--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "folder2graph.helloWorld",
-        "title": "Hello World"
+        "command": "folder2graph.start",
+        "title": "Folder2Graph"
       }
     ]
   },
